<resources>
    <string name="app_name">Season Hunter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map_hunter">Map</string>
    <string name="title_activity_sign_in_hunter">SignInHunter</string>
    <string name="title_activity_create_account_hunter">CreateAccountHunter</string>
    <string name="web_client_id">699243007049-1cfrugd5clvm7lt8chtmvrv3v8ptp2eh.apps.googleusercontent.com</string>
    <string name="facebook_app_id">401392967269455</string>
    <string name="fb_login_protocol_scheme">fb401392967269455</string>
    <string name="admob_id">ca-app-pub-7691767416808794~7579299208</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="filter">Filter</string>
    <string name="add_company">Add Company</string>
    <string name="settings">Settings</string>
    <string name="country_part_key">CoUntr3yK3Y</string>
    <string name="sign_email">E- mail</string>
    <string name="sign_password_short">The password has to be longer than 6 signs</string>
    <string-array name="company_types">
        <item></item>
        <item>Orchard</item>
        <item>Packhouse</item>
        <item>Restaurant</item>
        <item>Vineyard</item>
        <item>Farm</item>
        <item>Tree planting</item>
        <item>Factory</item>
        <item>Christmas</item>
        <item>Resort</item>
        <item>Sport</item>
        <item>National park</item>
        <item>Winter job</item>
    </string-array>
    <string name="orchard">Orchard</string>
    <string name="packhouse">Packhouse</string>
    <string name="restaurant">Restaurant</string>
    <string name="vineyard">Vineyard</string>
    <string name="farm">Farm</string>
    <string name="tree_planting">Tree planting</string>
    <string name="factory">Factory</string>
    <string name="christmas">Christmas</string>
    <string name="resort">Resort</string>
    <string name="sport">Sport</string>
    <string name="national_park">National park</string>
    <string name="winter_job">Winter job</string>
    <string name="other">Other</string>
    <string name="db_all_companies">companies</string>
    <string name="db_message">user_messages</string>
    <string name="db_edit">edit</string>
    <string name="db_review">reviews</string>
    <string name="db_new_company">New_companies</string>
    <string name="db_all_reviews">reviews</string>
    <string name="favourite">Favourite</string>
    <string name="share">Share</string>
    <string name="add_review">Add review</string>
    <string name="edit_job">Edit job</string>
    <string name="report_mistake">Edit</string>
    <string name="info">Info</string>
    <string name="reviews">Reviews</string>
    <string name="description">Description</string>
    <string name="photos">Photos</string>
    <string name="contact">Contact:</string>
    <string name="jobs">Jobs:</string>
    <string name="notes">Notes:</string>
    <string name="online_recruitment">Online recruitment</string>
    <string name="courses">Courses:</string>
    <string name="facilities">Facilities:</string>
    <string name="warning_job_dates">Working time indication can be inaccurate or incorrect.\nAlways enquire about job availability toward the company.</string>
    <string name="review">Review:</string>
    <string name="swipe_review">Swipe to see the next Review</string>
    <string name="work_position">Work position:</string>
    <string name="work_time">Work time:</string>
    <string name="wage">Wage:</string>
    <string name="piece_work">Piece work</string>
    <string name="hourly_paid">Hourly paid</string>
    <string name="earnings">Earnings:</string>
    <string name="atmosphere">Atmosphere:</string>
    <string name="work_organication">Organication:</string>
    <string name="comment">Comment:</string>
    <string name="give_feedback">Give your feedback</string>
    <string name="quest_work_position">What was your work position?</string>
    <string name="quest_work_time">How long did you work there?</string>
    <string name="add_work_time">Add work time</string>
    <string name="quest_pay_method">How did you get paid?</string>
    <string name="add_hourly">Hourly</string>
    <string name="add_piece_rate">Piece work</string>
    <string name="add_others">Other payment</string>
    <string name="quest_payment">How was your rate?</string>
    <string name="quest_salary">How much did you earn?</string>
    <string name="add_earnings">Earnings:</string>
    <string name="add_atmosphere">Atmosphere:</string>
    <string name="add_organisation">Organisation:</string>
    <string name="quest_comment">How was your experience at this company?</string>
    <string name="hint_comment">Comment here</string>
    <string name="review_sent">Your review has been sent</string>
    <string name="review_not_sent">There was a problem. Your review could not be sent!</string>
    <string name="cal_start_date">Start date</string>
    <string name="cal_end_date">End date</string>
    <string name="cal_duration">Duration:</string>
    <string name="cal_duration_days">days</string>
    <string name="cal_duration_warning">Your end date is under the start date!</string>
    <string name="no_work_position">Please let the others know your work position</string>
    <string name="no_work_time">Please let the others know the dates when you worked there</string>
    <string name="no_rate_earnings">Please rate how was the earning</string>
    <string name="no_rate_atmosphere">Please rate how was the atmosphere</string>
    <string name="no_rate_organisation">Please rate how was the company organisation</string>
    <string name="fill_fields_review">Please fill out this fields before to continue</string>
    <string name="no_wage_rate">No wage rate is filled</string>
    <string name="no_comment">No comment is filled</string>
    <string name="quest_send_review">Do you want to send your Review?</string>
    <string name="swipe_document">Swipe to see the next document!</string>
    <string name="list_show_more">Show more...</string>
    <string name="list_review_count">review/s</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="send">Send</string>
    <string name="change">Change</string>
    <string name="remove">Remove</string>
    <string-array name="weekdays_shortcuts">
        <item>Son</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string name="cal_range_select_date_range">Select a date range</string>
    <string name="cal_range_start_date">Start date:</string>
    <string name="cal_range_select_end_date">Select end date</string>
    <string name="cal_range_end_date">End date:</string>
    <string name="filter_title">Job title:</string>
    <string name="filter_keyword">Keyword</string>
    <string name="filter_company_type_plus"> + Company type</string>
    <string name="filter_compnay_type_minus"> - Company type</string>
    <string name="filter_phone">Show only with phone number</string>
    <string name="filter_email">Show only with e-mail</string>
    <string name="filter_website">Show only with website</string>
    <string name="filter_facilities">Filter facilities</string>
    <string name="filter_campground">Has campground</string>
    <string name="filter_month">Start month:</string>
    <string name="filter_favourites">Show favourites</string>
    <string name="filter_docs_not_loaded">The documents are not loaded yet!</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="new_name">What is the name of the company?</string>
    <string name="new_address">Type in the correct address</string>
    <string name="new_type">What kind of company is it?</string>
    <string name="new_type_other">Other company type</string>
    <string name="new_contact">Which contact informations do you have?</string>
    <string name="new_contact_error">Please fill in at least one contact information!</string>
    <string name="new_phone">Phone number</string>
    <string name="new_phone_hint">With countrycode (+1...)</string>
    <string name="new_email">E-mail</string>
    <string name="new_website">Website</string>
    <string name="new_online_recruitment">Online recruitment</string>
    <string name="new_job">Which jobs does the company offer?</string>
    <string name="new_job_title">Job title...</string>
    <string name="new_start_date">Start date of the job</string>
    <string name="new_end_date">End date of the job</string>
    <string name="new_of">of</string>
    <string name="new_start">Start date:</string>
    <string name="new_end">End date:</string>
    <string name="new_notes">Do you have some extra information for this job?</string>
    <string name="new_facilities">Does the company offer facilites?</string>
    <string name="new_facilities_hint">Facilities...</string>
    <string name="new_courses">Does the company offer courses?</string>
    <string name="new_courses_hint">Courses...</string>
    <string name="new_description">Can you describe the company in a few words?</string>
    <string name="new_toast_error">Please fill out the missing fields!</string>
    <string name="new_yes">Yes</string>
    <string name="new_no">No</string>
    <string name="new_clear">Do you want to clear everything?</string>
    <string name="new_sent">The new company has been sent successfully</string>
    <string name="new_not_sent">The new company could not be sent!</string>
    <string name="check_name">Company name:</string>
    <string name="check_type">Company type:</string>
    <string name="check_address">Company address:</string>
    <string name="check_contact">Contact:</string>
    <string name="check_phone">Phone:</string>
    <string name="check_email">Email:</string>
    <string name="check_website">Website:</string>
    <string name="check_online_recruitment">Online recruitment</string>
    <string name="check_job">Job:</string>
    <string name="check_title">Job title:</string>
    <string name="check_date">Date:</string>
    <string name="settings_report">Send message</string>
    <string name="settings_share">Share Season Hunter</string>
    <string name="settings_rate">Rate Season Hunter</string>
    <string name="settings_log_out">Log out</string>
    <string name="message_head">Do you have a question, any improving ideas or an error occured? Please let me know!!!</string>
    <string name="message">Send a message</string>
    <string name="edit_phone">Phone:</string>
    <string name="edit_new_phone">New number...</string>
    <string name="edit_email">Email:</string>
    <string name="edit_new_email">New email...</string>
    <string name="edit_website">Website:</string>
    <string name="edit_new_website">New website...</string>
    <string name="edit_online_recruitment">Online recruitment</string>
    <string name="edit_title">Job title:</string>
    <string name="edit_date">Date:</string>
    <string name="edit_notes">Notes:</string>
    <string name="edit">Edit</string>
    <string name="job_title">Job title:</string>
    <string name="no_payment">Please select a kind of Payment</string>
    <string name="start_date">Start date: (approximately)</string>
    <string name="end_date">End date: (approximately)</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="additional_info">Additional info:</string>
</resources>